--- a/Choose app.html
+++ b/Choose app.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang=eng>
+<html lang=en>
     <head>
         <meta charset="UTF-8">
+        <link href="style.css" rel="stylesheet" type="text/css">
         <title>Choose app</title> 
     </head>
 
 <body>
     <h1>Choose between activities</h1>
 
-    <div> 
-        <div> 
+    <div class="inputSection"> 
+        <div class="inputs"> 
             <input placeholder="..."> </input>
         </div>
-        <button>Add</button>
+        <button class="addOption">Add</button>
+        <button>Choose</button>
     </div>
-    <button>Choose</button>
 </body>
 </html>
