--- a/Choose app.html
+++ b/Choose app.html
@@ -14,7 +14,22 @@
             <input placeholder="..."> </input>
         </div>
         <button class="addOption">Add</button>
-        <button>Choose</button>
+        <div class="resultSection"> </div>
+
     </div>
+    <button>Choose</button>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"> 
+    </script>
+    <script>
+    $(function() {
+        $('.resultSection').hide()
+        var add_option = function() {
+            $('.inputs').append('<input></input>') 
+            }
+            $('.addOption').click(add_option)
+        
+    })
+    </script>
 </body>
 </html>
