--- a/Choose app.html
+++ b/Choose app.html
@@ -14,9 +14,8 @@
             <input placeholder="..."> </input>
         </div>
         <button class="addOption">Add</button>
-        <div class="resultSection"> </div>
-
     </div>
+        <div class="resultSection"></div>
     <button class="submit">Choose</button>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"> 
@@ -30,20 +29,18 @@
             $('.addOption').click(add_option)        
     
         var options = []
-
         var submit = function() {
         $('.inputSection').hide()
-        $('.resutSection').css('display', 'flex')
-        $('input').each(function(){
-            options.push($(this.val ))
+        $('.resultSection').css('display', 'flex')
+        $('input').each(function() {
+            options.push($(this).val())
         })
-
-        var winner = options [Math.floor(Math.random() * options.length)]
+        var winner = options[Math.floor(Math.random() * options.length)]
             console.log(winner)
             $('.resultSection').text(winner)
         }
         $('.submit').click(submit)
-    }) 
+        }) 
     </script>
 </body>
 </html>
